# dojo1006

./: db.sqlite3  manage.py  pyproject.toml
base/: urls.py
base/static/: app.css
base/static_files/: styles.css
base/templates/: base.html  index.html
marketplace/: models.py  urls.py  views.py
marketplace/migrations/: 0001_initial.py
marketplace/templates/: marketplace.html
seller/: forms.py  models.py  urls.py  views.py
seller/migrations/: 0001_initial.py  0002_auto_20210610_1449.py  0003_auto_20210610_1452.py  0004_auto_20210610_1516.py
seller/templates/: seller.html  seller_form.html
setup/: settings.py  urls.py
