[tool.poetry]
name = "dojo1006"
version = "0.1.0"
description = ""
authors = ["JuniorCardoso <tarcisio.cardoso@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
